--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="./build/js/app.js"></script>
+    <script src="./bundle/js/app.js"></script>
 </body>
 </html>
